--- a/straightjacket.scss
+++ b/straightjacket.scss
@@ -32,5 +32,5 @@
 @include text-sizing($config: ());
 //@include text-helpers();
 //@include general-helpers();
-//@include popover-modals();
+@include popover-modals();
 
